force-app/main/default/objects/Training__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <referenceTo>Orientation__c</referenceTo>
    <relationshipLabel>Tranings</relationshipLabel>
    <relationshipName>Tranings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>