force-app/main/default/objects/Training__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Tranings</relationshipLabel>
    <relationshipName>Tranings</relationshipName>
    <type>Lookup</type>
</CustomField>