force-app/main/default/objects/Training__c/fields/Training_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Start_Date__c</fullName>
    <label>Training Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>